--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -1,10 +1,21 @@
 body {
-  margin: 0;
+  margin: 10;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h2 {
+  color: green;
+  font-style: italic;
+}
+
+.person {
+  color: red;
+  padding-top: 3px;
+  font-size: 15px
 }
 
 code {
