--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -7,15 +7,24 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-h2 {
-  color: green;
-  font-style: italic;
+.error {
+  color: red;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
-.person {
-  color: red;
-  padding-top: 3px;
-  font-size: 15px
+.success {
+  color: green;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
 code {
